Working on Attention init method

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,13 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f5e0c294",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "from dataclasses import dataclass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e91ce564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Config:\n",
+    "    d_model: int\n",
+    "    d_vocab: int\n",
+    "    d_hidden: int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b5d489d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class Embedding(nn.Module):\n",
+    "#     def __init__(self):\n",
+    "#         super().__init__()\n",
+    "    \n",
+    "#     def forward(self):\n",
+    "#         pass\n",
+    "\n",
+    "class Attention(nn.Module):\n",
+    "    def __init__(self, config: Config):\n",
+    "        super().__init__()\n",
+    "        # self.W_qk = nn.Linear(config.d_model, config.d_vocab)\n",
+    "        self.bilinear = nn.Bilinear(config.d_model, config.d_model)\n",
+    "        self.M = torch.triu(torch.ones((config.d_model, config.d_model)), diagonal=1).bool()\n",
+    "        self.M[self.M] = -torch.inf\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.bilinear(x)\n",
+    "        x += self.M\n",
+    "        x = torch.softmax(x)\n",
+    "        return x\n",
+    "\n",
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, config: Config):\n",
+    "        super.__init__()\n",
+    "        self.linear_up = nn.Linear(config.d_model, config.d_hidden)\n",
+    "        self.linear_down = nn.Linear(config.d_hidden, config.d_model)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.linear_up(x)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.linear_down(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17f7ee2d",
+   "metadata": {},
+   "source": [
+    "$n_c$: Context window length\n",
+    "\n",
+    "$d_m$: Model Dimension\n",
+    "\n",
+    "$d_v$: Vocab Dimension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a63ed903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_model = 10\n",
+    "d_vocab = 10\n",
+    "d_hidden = 10\n",
+    "\n",
+    "conf = Config(d_model, d_vocab, d_hidden)\n",
+    "\n",
+    "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)"
    ]
   }
  ],
@@ -19,7 +103,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.11"
   }
  },
