--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -44,19 +44,24 @@
     "    def __init__(self, config: Config):\n",
     "        super().__init__()\n",
     "        # self.W_qk = nn.Linear(config.d_model, config.d_vocab)\n",
-    "        self.bilinear = nn.Bilinear(config.d_model, config.d_model)\n",
+    "        self.bilinear = nn.Bilinear(config.d_model, config.d_model, bias=False)\n",
     "        self.M = torch.triu(torch.ones((config.d_model, config.d_model)), diagonal=1).bool()\n",
     "        self.M[self.M] = -torch.inf\n",
+    "        self.second_matmult = nn.Linear(config.d_model, config.d_model, bias=False)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        x = self.bilinear(x)\n",
-    "        x += self.M\n",
-    "        x = torch.softmax(x)\n",
-    "        return x\n",
+    "        xwx = self.bilinear(x)\n",
+    "        x_masked = xwx+ self.M\n",
+    "        x_softmaxed = torch.softmax(x_masked)\n",
+    "        x_fin = x_softmaxed@x\n",
+    "        #multiply softmaxed by x\n",
+    "        #multiply that by wov\n",
+    "        x_fin = self.second_matmult(x_fin)\n",
+    "        return x_fin\n",
     "\n",
     "class MLP(nn.Module):\n",
     "    def __init__(self, config: Config):\n",
-    "        super.__init__()\n",
+    "        super().__init__()\n",
     "        self.linear_up = nn.Linear(config.d_model, config.d_hidden)\n",
     "        self.linear_down = nn.Linear(config.d_hidden, config.d_model)\n",
     "    \n",
