Transformer Block created

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -69,7 +69,17 @@
     "        x = self.linear_up(x)\n",
     "        x = torch.relu(x)\n",
     "        x = self.linear_down(x)\n",
-    "        return x"
+    "        return x\n",
+    "    \n",
+    "class TransformerBlock(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.MLP = MLP()\n",
+    "        self.Attention = Attention()\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return x + self.Attention(x) + self.MLP(x)"
    ]
   },
   {
@@ -97,7 +107,8 @@
     "\n",
     "conf = Config(d_model, d_vocab, d_hidden)\n",
     "\n",
-    "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)"
+    "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
+    "\n"
    ]
   }
  ],
