--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "f5e0c294",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from dataclasses import dataclass"
+    "from dataclasses import dataclass\n",
+    "\n",
+    "import requests\n",
+    "import unicodedata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -96,7 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "id": "937b0e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_sample = \"The quick brown fox jumped over the lazy dog.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "a63ed903",
    "metadata": {},
    "outputs": [],
@@ -109,6 +122,179 @@
     "\n",
     "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "549c941e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "def get_gutenberg_book(\n",
+    "\tid: int | None = 84,\n",
+    "\tdata_temp: Path | str = \"../data/gutenberg_data\",\n",
+    "\tremove_gutenberg_meta: bool = True,\n",
+    ") -> str:\n",
+    "\t\n",
+    "\tdata_temp: Path = Path(data_temp)\n",
+    "\tdata_temp.mkdir(parents=True, exist_ok=True)\n",
+    "\t\n",
+    "\turl: str = f\"https://www.gutenberg.org/cache/epub/{id}/pg{id}.txt\"\n",
+    "\tdata_path: Path = Path(data_temp) / f\"{id}.txt\"\n",
+    "\tdata: str\n",
+    "\t# read from cache if it exists\n",
+    "\tif data_path.exists():\n",
+    "\t\twith open(data_path, 'r', encoding='utf-8') as file:\n",
+    "\t\t\tdata = file.read()\n",
+    "\telse:\n",
+    "\t\t# download if it doesn't exist\n",
+    "\t\tresponse: requests.Response = requests.get(url)\n",
+    "\t\tresponse.raise_for_status()  # Ensure that the download was successful\n",
+    "\t\tdata = response.text\n",
+    "\n",
+    "\t\t# save to cache\n",
+    "\t\twith open(data_path, 'w', encoding='utf-8') as file:\n",
+    "\t\t\tfile.write(data)\n",
+    "\n",
+    "\t# remove header/footer\n",
+    "\tif remove_gutenberg_meta:\n",
+    "\t\tdata = '***'.join(data.split('***')[2:])\n",
+    "\t\tdata = '***'.join(data.split('***')[:-1])\n",
+    "\t\n",
+    "\treturn data\n",
+    "\n",
+    "def get_many_books(\n",
+    "\t\tids: list[int],\n",
+    "\t\tdata_temp: Path | str = \"../data/gutenberg_data\",\n",
+    "\t) -> list[str]:\n",
+    "\t\n",
+    "\tdata: list[str] = []\n",
+    "\tfor id in ids:\n",
+    "\t\tprint(f\"Getting book {id}...\")\n",
+    "\t\titem: str = get_gutenberg_book(id, data_temp)\n",
+    "\t\tprint(f\"\\t{len(item)} characters read\")\n",
+    "\t\tdata.append(item)\n",
+    "\t\n",
+    "\treturn data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9c1b9c78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_text(\n",
+    "\ttext: str,\n",
+    "\tallowed_punctuation: str = \"-.,;:!?()\\\"\\\\\" + \"\".join(str(x) for x in range(10)),\n",
+    "\tpunctuation_convert: dict[str, str] = {'—': '-'},\n",
+    ") -> str:\n",
+    "\t\n",
+    "\t# replace some special characters which unicode won't normalize properly\n",
+    "\tfor char, replacement in punctuation_convert.items():\n",
+    "\t\ttext = text.replace(char, replacement)\n",
+    "\n",
+    "\t# if a line has \".jpg\" in it, remove that line (this is specific to Don Quixote)\n",
+    "\ttext = '\\n'.join(\n",
+    "\t\tline \n",
+    "\t\tfor line in text.split('\\n')\n",
+    "\t\tif '.jpg' not in line\n",
+    "\t)\n",
+    "\n",
+    "\t# Normalize the string to decompose Unicode characters\n",
+    "\ttext = unicodedata.normalize('NFKD', text)\n",
+    "\n",
+    "\t# Encode to ASCII bytes, then decode back to string, ignoring errors\n",
+    "\ttext = text.encode('ascii', 'ignore').decode('ascii')\n",
+    "\n",
+    "\t# remove newlines and tabs\n",
+    "\ttext = text.replace('\\n', ' ').replace('\\t', ' ')\n",
+    "\n",
+    "\n",
+    "\t# put spaces around allowed punctuation\n",
+    "\tfor char in allowed_punctuation:\n",
+    "\t\ttext = text.replace(char, f' {char} ')\n",
+    "\n",
+    "\n",
+    "\t# remove leading and trailing spaces\n",
+    "\ttext = text.strip()\n",
+    "\n",
+    "\t# remove multiple spaces\n",
+    "\twhile '  ' in text:\n",
+    "\t\ttext = text.replace('  ', ' ')\n",
+    "\n",
+    "\n",
+    "\t# remove all characters except (alphanumeric, allowed_punctuation, ' ')\n",
+    "\ttext = ''.join(\n",
+    "\t\t(\n",
+    "\t\t\tchar \n",
+    "\t\t\tif (\n",
+    "\t\t\t\tchar.isalnum() \n",
+    "\t\t\t\tor char in allowed_punctuation \n",
+    "\t\t\t\tor char == ' '\n",
+    "\t\t\t)\n",
+    "\t\t\telse ' '\n",
+    "\t\t)\n",
+    "\t\tfor char in text \n",
+    "\t)\n",
+    "\n",
+    "\t# convert to lowercase\n",
+    "\ttext = text.lower()\n",
+    "\n",
+    "\ttext = text.strip()\n",
+    "\n",
+    "\treturn text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ad6713ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize(\n",
+    "\ttext: str,\n",
+    "\tprocess: bool = False,\n",
+    ") -> list[str]:\n",
+    "\tif process:\n",
+    "\t\ttext = process_text(text)\n",
+    "\treturn text.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7c274f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting book 84...\n",
+      "\t419422 characters read\n",
+      "Getting book 15...\n",
+      "\t1238469 characters read\n",
+      "Getting book 18...\n",
+      "\t1172825 characters read\n",
+      "Getting book 82...\n",
+      "\t1103796 characters read\n",
+      "Getting book 996...\n",
+      "\t2299352 characters read\n",
+      "Getting book 2600...\n",
+      "\t3208337 characters read\n"
+     ]
+    }
+   ],
+   "source": [
+    "DATA_RAW: list[str] = get_many_books([84, 15, 18, 82, 996, 2600])\n",
+    "DATA: str = \" \".join(process_text(x) for x in DATA_RAW)\n",
+    "DATA_TOKENIZED: list[str] = tokenize(DATA)"
    ]
   }
  ],
