--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "f5e0c294",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sawyer\\Documents\\decodingGPT\\transformer\\.venv\\Lib\\site-packages\\torch\\_subclasses\\functional_tensor.py:283: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\torch\\csrc\\utils\\tensor_numpy.cpp:84.)\n",
+      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -26,12 +35,37 @@
     "class Config:\n",
     "    d_model: int\n",
     "    d_vocab: int\n",
-    "    d_hidden: int"
+    "    d_hidden: int\n",
+    "    n_context: int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "id": "66313a23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., -inf, -inf, -inf, -inf],\n",
+      "        [0., 0., -inf, -inf, -inf],\n",
+      "        [0., 0., 0., -inf, -inf],\n",
+      "        [0., 0., 0., 0., -inf],\n",
+      "        [0., 0., 0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = torch.triu(torch.ones((5, 5)), diagonal=1)\n",
+    "M = M.masked_fill(M.bool(), -torch.inf)\n",
+    "print(M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -47,15 +81,16 @@
     "    def __init__(self, config: Config):\n",
     "        super().__init__()\n",
     "        # self.W_qk = nn.Linear(config.d_model, config.d_vocab)\n",
-    "        self.bilinear = nn.Bilinear(config.d_model, config.d_model, bias=False)\n",
-    "        self.M = torch.triu(torch.ones((config.d_model, config.d_model)), diagonal=1).bool()\n",
-    "        self.M[self.M] = -torch.inf\n",
+    "        self.bilinear = nn.Bilinear(config.d_model, config.d_model, config.n_context, bias=False)\n",
+    "        self.M = torch.triu(torch.ones((config.d_model, config.d_model)), diagonal=1)\n",
+    "        self.M = M.masked_fill(M.bool(), -torch.inf)\n",
     "        self.second_matmult = nn.Linear(config.d_model, config.d_model, bias=False)\n",
+    "        self.softmax = nn.Softmax(dim=config.d_model)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        xwx = self.bilinear(x)\n",
     "        x_masked = xwx+ self.M\n",
-    "        x_softmaxed = torch.softmax(x_masked)\n",
+    "        x_softmaxed = self.softmax(x)\n",
     "        x_fin = x_softmaxed@x\n",
     "        #multiply softmaxed by x\n",
     "        #multiply that by wov\n",
@@ -314,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
