--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -110,11 +110,12 @@
     "        return x\n",
     "    \n",
     "class TransformerBlock(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, config: Config):\n",
     "        super().__init__()\n",
+    "        self.config = Config\n",
     "\n",
-    "        self.MLP = MLP()\n",
-    "        self.Attention = Attention()\n",
+    "        self.MLP = MLP(config=self.config)\n",
+    "        self.Attention = Attention(config=self.config)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        return x + self.Attention(x) + self.MLP(x)"
