--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -112,7 +112,7 @@
     "class TransformerBlock(nn.Module):\n",
     "    def __init__(self, config: Config):\n",
     "        super().__init__()\n",
-    "        self.config = Config\n",
+    "        self.config = config\n",
     "\n",
     "        self.MLP = MLP(config=self.config)\n",
     "        self.Attention = Attention(config=self.config)\n",
