Updated some classes and added a test for MLP

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f5e0c294",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Sawyer\\Documents\\decodingGPT\\transformer\\.venv\\Lib\\site-packages\\torch\\_subclasses\\functional_tensor.py:283: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\torch\\csrc\\utils\\tensor_numpy.cpp:84.)\n",
-      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -41,22 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "66313a23",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0., -inf, -inf, -inf, -inf],\n",
-      "        [0., 0., -inf, -inf, -inf],\n",
-      "        [0., 0., 0., -inf, -inf],\n",
-      "        [0., 0., 0., 0., -inf],\n",
-      "        [0., 0., 0., 0., 0.]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = torch.triu(torch.ones((5, 5)), diagonal=1)\n",
     "M = M.masked_fill(M.bool(), -torch.inf)\n",
@@ -82,15 +61,15 @@
     "        super().__init__()\n",
     "        # self.W_qk = nn.Linear(config.d_model, config.d_vocab)\n",
     "        self.bilinear = nn.Bilinear(config.d_model, config.d_model, config.n_context, bias=False)\n",
-    "        self.M = torch.triu(torch.ones((config.d_model, config.d_model)), diagonal=1)\n",
+    "        self.M = torch.triu(torch.ones((config.n_context, config.n_context)), diagonal=1)\n",
     "        self.M = M.masked_fill(M.bool(), -torch.inf)\n",
     "        self.second_matmult = nn.Linear(config.d_model, config.d_model, bias=False)\n",
     "        self.softmax = nn.Softmax(dim=config.d_model)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        xwx = self.bilinear(x)\n",
-    "        x_masked = xwx+ self.M\n",
-    "        x_softmaxed = self.softmax(x)\n",
+    "        xwx = self.bilinear(x) # d_m x d_m\n",
+    "        x_masked = xwx+ self.M \n",
+    "        x_softmaxed = self.softmax(x_masked)\n",
     "        x_fin = x_softmaxed@x\n",
     "        #multiply softmaxed by x\n",
     "        #multiply that by wov\n",
@@ -135,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "937b0e3d",
    "metadata": {},
    "outputs": [],
@@ -145,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a63ed903",
    "metadata": {},
    "outputs": [],
@@ -153,8 +132,9 @@
     "d_model = 10\n",
     "d_vocab = 10\n",
     "d_hidden = 10\n",
+    "n_context = 10\n",
     "\n",
-    "conf = Config(d_model, d_vocab, d_hidden)\n",
+    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
     "\n",
     "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
     "\n"
@@ -162,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "549c941e",
    "metadata": {},
    "outputs": [],
@@ -219,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "9c1b9c78",
    "metadata": {},
    "outputs": [],
@@ -288,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ad6713ca",
    "metadata": {},
    "outputs": [],
@@ -304,33 +284,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "7c274f21",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting book 84...\n",
-      "\t419422 characters read\n",
-      "Getting book 15...\n",
-      "\t1238469 characters read\n",
-      "Getting book 18...\n",
-      "\t1172825 characters read\n",
-      "Getting book 82...\n",
-      "\t1103796 characters read\n",
-      "Getting book 996...\n",
-      "\t2299352 characters read\n",
-      "Getting book 2600...\n",
-      "\t3208337 characters read\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DATA_RAW: list[str] = get_many_books([84, 15, 18, 82, 996, 2600])\n",
     "DATA: str = \" \".join(process_text(x) for x in DATA_RAW)\n",
     "DATA_TOKENIZED: list[str] = tokenize(DATA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7248308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_model = 10\n",
+    "d_vocab = 10\n",
+    "d_hidden = 10\n",
+    "n_context = 10\n",
+    "\n",
+    "x = torch.rand(1, 10)\n",
+    "\n",
+    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
+    "mlp = MLP(conf)\n",
+    "attention = Attention(conf)\n",
+    "Aoutput = attention(x)\n",
+    "output = mlp(x)\n",
+    "print(output)\n",
+    "\n"
    ]
   }
  ],
