--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -32,19 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66313a23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "M = torch.triu(torch.ones((5, 5)), diagonal=1)\n",
-    "M = M.masked_fill(M.bool(), -torch.inf)\n",
-    "print(M)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -62,12 +50,12 @@
     "        # self.W_qk = nn.Linear(config.d_model, config.d_vocab)\n",
     "        self.bilinear = nn.Bilinear(config.d_model, config.d_model, config.n_context, bias=False)\n",
     "        self.M = torch.triu(torch.ones((config.n_context, config.n_context)), diagonal=1)\n",
-    "        self.M = M.masked_fill(M.bool(), -torch.inf)\n",
+    "        self.M = self.M.masked_fill(self.M.bool(), -torch.inf)\n",
     "        self.second_matmult = nn.Linear(config.d_model, config.d_model, bias=False)\n",
-    "        self.softmax = nn.Softmax(dim=config.d_model)\n",
+    "        self.softmax = nn.Softmax()\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        xwx = self.bilinear(x) # d_m x d_m\n",
+    "        xwx = self.bilinear(x, x) # d_m x d_m\n",
     "        x_masked = xwx+ self.M \n",
     "        x_softmaxed = self.softmax(x_masked)\n",
     "        x_fin = x_softmaxed@x\n",
@@ -114,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "937b0e3d",
    "metadata": {},
    "outputs": [],
@@ -296,22 +284,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a7248308",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 10])\n",
+      "tensor([[ 0.3668, -0.0897,  0.2870, -0.4726,  0.0341, -0.2712,  0.2344, -0.0119,\n",
+      "          0.0806,  0.2910],\n",
+      "        [ 0.4433, -0.3422,  0.0211, -0.4508, -0.5492,  0.5918,  0.0260,  0.3143,\n",
+      "          0.2249,  0.0624],\n",
+      "        [ 0.1528,  0.1009,  0.4494, -1.0857, -0.3989,  0.2402,  0.2270,  0.0498,\n",
+      "          0.4418, -0.3364],\n",
+      "        [ 0.2066, -0.1957,  0.2769, -0.2693, -0.3526,  0.1198,  0.0411,  0.1876,\n",
+      "          0.1822,  0.0874],\n",
+      "        [ 0.1578, -0.0674,  0.4384, -0.4012, -0.3769,  0.0836, -0.0981, -0.0835,\n",
+      "          0.2477,  0.0381]], grad_fn=<AddmmBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sawyer\\Documents\\decodingGPT\\transformer\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1776: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "d_model = 10\n",
     "d_vocab = 10\n",
     "d_hidden = 10\n",
-    "n_context = 10\n",
+    "n_context = 5\n",
     "\n",
-    "x = torch.rand(1, 10)\n",
+    "x = torch.randn((n_context, d_model))\n",
     "\n",
     "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
     "mlp = MLP(conf)\n",
     "attention = Attention(conf)\n",
     "Aoutput = attention(x)\n",
+    "print(Aoutput.shape)\n",
+    "\n",
     "output = mlp(x)\n",
     "print(output)\n",
     "\n"
