Added a test for the Transformer Block Class

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f5e0c294",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55346da0",
+   "metadata": {},
+   "source": [
+    "# Classes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "937b0e3d",
    "metadata": {},
    "outputs": [],
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a63ed903",
    "metadata": {},
    "outputs": [],
@@ -129,8 +137,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b19deb5",
+   "metadata": {},
+   "source": [
+    "# Tokenization Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "549c941e",
    "metadata": {},
    "outputs": [],
@@ -187,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9c1b9c78",
    "metadata": {},
    "outputs": [],
@@ -256,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ad6713ca",
    "metadata": {},
    "outputs": [],
@@ -272,10 +288,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7c274f21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting book 84...\n",
+      "\t419422 characters read\n",
+      "Getting book 15...\n",
+      "\t1238469 characters read\n",
+      "Getting book 18...\n",
+      "\t1172825 characters read\n",
+      "Getting book 82...\n",
+      "\t1103796 characters read\n",
+      "Getting book 996...\n",
+      "\t2299352 characters read\n",
+      "Getting book 2600...\n",
+      "\t3208337 characters read\n"
+     ]
+    }
+   ],
    "source": [
     "DATA_RAW: list[str] = get_many_books([84, 15, 18, 82, 996, 2600])\n",
     "DATA: str = \" \".join(process_text(x) for x in DATA_RAW)\n",
@@ -283,8 +318,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a38824d3",
+   "metadata": {},
+   "source": [
+    "# Tests"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "a7248308",
    "metadata": {},
    "outputs": [
@@ -293,23 +336,23 @@
      "output_type": "stream",
      "text": [
       "torch.Size([5, 10])\n",
-      "tensor([[ 0.3668, -0.0897,  0.2870, -0.4726,  0.0341, -0.2712,  0.2344, -0.0119,\n",
-      "          0.0806,  0.2910],\n",
-      "        [ 0.4433, -0.3422,  0.0211, -0.4508, -0.5492,  0.5918,  0.0260,  0.3143,\n",
-      "          0.2249,  0.0624],\n",
-      "        [ 0.1528,  0.1009,  0.4494, -1.0857, -0.3989,  0.2402,  0.2270,  0.0498,\n",
-      "          0.4418, -0.3364],\n",
-      "        [ 0.2066, -0.1957,  0.2769, -0.2693, -0.3526,  0.1198,  0.0411,  0.1876,\n",
-      "          0.1822,  0.0874],\n",
-      "        [ 0.1578, -0.0674,  0.4384, -0.4012, -0.3769,  0.0836, -0.0981, -0.0835,\n",
-      "          0.2477,  0.0381]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[-0.3691,  0.0318,  0.1421, -0.2532, -0.5018, -0.1011,  0.2451, -0.0393,\n",
+      "          0.0351, -0.0041],\n",
+      "        [-0.2701,  0.1775,  0.0922, -0.2210, -0.3877, -0.0682,  0.2059, -0.2404,\n",
+      "          0.1205, -0.1657],\n",
+      "        [ 0.0494,  0.2298, -0.1569, -0.2315, -0.3186, -0.1338, -0.3310, -0.0626,\n",
+      "          0.0645,  0.0095],\n",
+      "        [ 0.0099,  0.2639, -0.0911, -0.2583, -0.3254, -0.1297, -0.2129, -0.2359,\n",
+      "          0.1237, -0.0108],\n",
+      "        [ 0.1208,  0.2542, -0.1770, -0.1454, -0.2068, -0.0533, -0.0912, -0.0022,\n",
+      "          0.0207,  0.2528]], grad_fn=<AddmmBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Sawyer\\Documents\\decodingGPT\\transformer\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1776: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "/Users/danielkrawciw/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1776: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  return self._call_impl(*args, **kwargs)\n"
      ]
     }
@@ -332,6 +375,64 @@
     "print(output)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6758f832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.3712,  0.3981, -0.6220,  2.4504, -1.2197, -0.9029, -2.5249,  0.3925,\n",
+       "          0.1311,  0.9976],\n",
+       "        [-1.2218,  0.6218, -0.4370,  0.0209, -1.0655, -0.3094,  0.3904,  0.6515,\n",
+       "         -0.9897, -1.3531],\n",
+       "        [ 0.0074, -0.1127,  0.2799, -0.3389, -0.0927, -1.2503,  0.3873,  1.3605,\n",
+       "         -0.1407,  1.2934],\n",
+       "        [-0.8746,  2.0001,  0.8767,  2.9100, -1.4419, -0.8370,  0.6010,  0.5973,\n",
+       "          0.3860, -0.8884],\n",
+       "        [-1.0056,  0.7414, -1.6013, -0.4434, -1.5685, -0.4595, -0.5369,  0.1884,\n",
+       "         -0.8158, -0.8711]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transformer Block test\n",
+    "\n",
+    "d_model = 10\n",
+    "d_vocab = 10\n",
+    "d_hidden = 10\n",
+    "n_context = 5\n",
+    "\n",
+    "config = Config(\n",
+    "    d_model = d_model,\n",
+    "    d_vocab = d_vocab,\n",
+    "    d_hidden = d_hidden,\n",
+    "    n_context = n_context,\n",
+    ")\n",
+    "\n",
+    "x = torch.randn((n_context, d_model))\n",
+    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
+    "\n",
+    "tb = TransformerBlock(config)\n",
+    "\n",
+    "output_x = tb(x)\n",
+    "output_x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9880932d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
