--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "f5e0c294",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,11 @@
     "from dataclasses import dataclass\n",
     "\n",
     "import requests\n",
-    "import unicodedata"
+    "import unicodedata\n",
+    "\n",
+    "from jaxtyping import Int, Float\n",
+    "from collections import Counter\n",
+    "import numpy as np"
    ]
   },
   {
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "937b0e3d",
    "metadata": {},
    "outputs": [],
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "a63ed903",
    "metadata": {},
    "outputs": [],
@@ -146,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "549c941e",
    "metadata": {},
    "outputs": [],
@@ -203,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "9c1b9c78",
    "metadata": {},
    "outputs": [],
@@ -272,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "ad6713ca",
    "metadata": {},
    "outputs": [],
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "7c274f21",
    "metadata": {},
    "outputs": [
@@ -318,6 +322,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "317fb7a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATA_ENCODED[:10] = array([ 4675,    13,    40,     0,     1,  1587, 12126,    27,   278,\n",
+      "       24255])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sorted by frequency\n",
+    "VOCAB_FREQ: Counter[str] = Counter(DATA_TOKENIZED)\n",
+    "VOCAB_ARR: list[str] = [word for word, _ in VOCAB_FREQ.most_common()]\n",
+    "VOCAB_DICT: dict[str, int] = {word: i for i, word in enumerate(VOCAB_ARR)}\n",
+    "\n",
+    "def encode(\n",
+    "\ttext: str | list[str],\n",
+    ") -> Int[np.ndarray, \" n_tokens\"]:\n",
+    "\tif isinstance(text, str):\n",
+    "\t\ttext = tokenize(text)\n",
+    "\treturn np.array([VOCAB_DICT[word] for word in text])\n",
+    "\n",
+    "def decode(\n",
+    "\tencoded_text: Int[np.ndarray, \" n_tokens\"] | list[int],\n",
+    ") -> str:\n",
+    "\treturn ' '.join(VOCAB_ARR[i] for i in encoded_text)\n",
+    "\n",
+    "DATA_ENCODED: Int[np.ndarray, \" n_tokens\"] = encode(DATA)\n",
+    "\n",
+    "print(f\"{DATA_ENCODED[:10] = }\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a38824d3",
    "metadata": {},
@@ -327,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "a7248308",
    "metadata": {},
    "outputs": [
@@ -336,16 +378,16 @@
      "output_type": "stream",
      "text": [
       "torch.Size([5, 10])\n",
-      "tensor([[-0.3691,  0.0318,  0.1421, -0.2532, -0.5018, -0.1011,  0.2451, -0.0393,\n",
-      "          0.0351, -0.0041],\n",
-      "        [-0.2701,  0.1775,  0.0922, -0.2210, -0.3877, -0.0682,  0.2059, -0.2404,\n",
-      "          0.1205, -0.1657],\n",
-      "        [ 0.0494,  0.2298, -0.1569, -0.2315, -0.3186, -0.1338, -0.3310, -0.0626,\n",
-      "          0.0645,  0.0095],\n",
-      "        [ 0.0099,  0.2639, -0.0911, -0.2583, -0.3254, -0.1297, -0.2129, -0.2359,\n",
-      "          0.1237, -0.0108],\n",
-      "        [ 0.1208,  0.2542, -0.1770, -0.1454, -0.2068, -0.0533, -0.0912, -0.0022,\n",
-      "          0.0207,  0.2528]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[ 0.3862,  0.2528, -0.3346, -0.4032, -0.0439, -0.0101,  0.3036,  0.1906,\n",
+      "         -0.2531,  0.5045],\n",
+      "        [-0.1007, -0.2256,  0.2427, -0.2873,  0.0038,  0.0195,  0.2928,  0.4025,\n",
+      "         -0.0872,  0.5707],\n",
+      "        [ 0.1671, -0.1158,  0.0721, -0.0478, -0.0767, -0.0494,  0.2726,  0.2951,\n",
+      "         -0.0321,  0.2939],\n",
+      "        [ 0.3037, -0.1483, -0.0331, -0.1628, -0.0641,  0.0091,  0.2530,  0.2732,\n",
+      "         -0.0047,  0.2618],\n",
+      "        [-0.0203,  0.2980,  0.0064,  0.2197,  0.1812,  0.3969, -0.0825,  0.3056,\n",
+      "         -0.0644,  0.5064]], grad_fn=<AddmmBackward0>)\n"
      ]
     },
     {
@@ -378,26 +420,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "6758f832",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-1.3712,  0.3981, -0.6220,  2.4504, -1.2197, -0.9029, -2.5249,  0.3925,\n",
-       "          0.1311,  0.9976],\n",
-       "        [-1.2218,  0.6218, -0.4370,  0.0209, -1.0655, -0.3094,  0.3904,  0.6515,\n",
-       "         -0.9897, -1.3531],\n",
-       "        [ 0.0074, -0.1127,  0.2799, -0.3389, -0.0927, -1.2503,  0.3873,  1.3605,\n",
-       "         -0.1407,  1.2934],\n",
-       "        [-0.8746,  2.0001,  0.8767,  2.9100, -1.4419, -0.8370,  0.6010,  0.5973,\n",
-       "          0.3860, -0.8884],\n",
-       "        [-1.0056,  0.7414, -1.6013, -0.4434, -1.5685, -0.4595, -0.5369,  0.1884,\n",
-       "         -0.8158, -0.8711]], grad_fn=<AddBackward0>)"
+       "tensor([[ 3.8475, -2.0726,  1.0514,  0.8324, -0.4577, -1.6299,  0.7028,  2.8054,\n",
+       "         -0.8925, -1.0399],\n",
+       "        [ 2.9761, -0.6997, -0.6032,  2.6684,  0.1813,  1.4837, -0.1221,  0.9587,\n",
+       "          0.3077, -1.1505],\n",
+       "        [ 2.3151,  1.8852, -0.4046,  1.1583, -1.5020, -0.6166, -0.8820,  1.2308,\n",
+       "         -0.0742, -1.2055],\n",
+       "        [ 1.3883, -0.1457,  0.3347,  2.0383,  0.6824,  1.7610, -1.7258,  0.1451,\n",
+       "          0.2311, -2.7143],\n",
+       "        [-0.5221,  0.6496, -2.3000,  0.4011,  0.5412, -1.5619, -1.4592, -0.0642,\n",
+       "         -1.2541, -0.4855]], grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,6 +474,12 @@
    "id": "9880932d",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d886bb",
+   "metadata": {},
    "source": []
   }
  ],
