--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,16 @@
     "        self.Attention = Attention(config=self.config)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        return x + self.Attention(x) + self.MLP(x)"
+    "        return x + self.Attention(x) + self.MLP(x)\n",
+    "    \n",
+    "class Transformer(nn.Module):\n",
+    "    def __init__(self, config:Config):\n",
+    "        self.transformerBlock = nn.ModuleList([TransformerBlock(config) for i in range(2)])\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        for i, l in enumerate(self.transformerBlock):\n",
+    "            x = self.transformerBlock[i](x)\n",
+    "        return "
    ]
   },
   {
