Adding the ids of books by Plato and Aristotle from Project Guttenberg

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "7c274f21",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,8 @@
     }
    ],
    "source": [
-    "DATA_RAW: list[str] = get_many_books([84, 15, 18, 82, 996, 2600])\n",
+    "# Getting books from Plato and Aristotle\n",
+    "DATA_RAW: list[str] = get_many_books([6762, 1497, 8438, 1600, 1656])\n",
     "DATA: str = \" \".join(process_text(x) for x in DATA_RAW)\n",
     "DATA_TOKENIZED: list[str] = tokenize(DATA)"
    ]
