added correct dvocab

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "f5e0c294",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "937b0e3d",
    "metadata": {},
    "outputs": [],
@@ -132,8 +132,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b19deb5",
+   "metadata": {},
+   "source": [
+    "# Tokenization Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "a63ed903",
    "metadata": {},
    "outputs": [],
@@ -150,16 +158,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8b19deb5",
-   "metadata": {},
-   "source": [
-    "# Tokenization Code"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "549c941e",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "9c1b9c78",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "ad6713ca",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "317fb7a3",
    "metadata": {},
    "outputs": [
@@ -341,8 +341,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATA_ENCODED[:10] = array([ 4675,    13,    40,     0,     1,  1587, 12126,    27,   278,\n",
-      "       24255])\n"
+      "DATA_ENCODED = array([4675,   14,    0, ...,  320,    4,  422], shape=(2176323,))\n",
+      "2176323\n"
      ]
     }
    ],
@@ -366,7 +366,8 @@
     "\n",
     "DATA_ENCODED: Int[np.ndarray, \" n_tokens\"] = encode(DATA)\n",
     "\n",
-    "print(f\"{DATA_ENCODED[:10] = }\")"
+    "print(f\"{DATA_ENCODED = }\")\n",
+    "print(len(DATA_ENCODED))"
    ]
   },
   {
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "a7248308",
    "metadata": {},
    "outputs": [
@@ -411,7 +412,7 @@
    ],
    "source": [
     "d_model = 10\n",
-    "d_vocab = 10\n",
+    "d_vocab = len(DATA_ENCODED)\n",
     "d_hidden = 10\n",
     "n_context = 5\n",
     "\n",
