--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -141,24 +141,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a63ed903",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_model = 10\n",
-    "d_vocab = 10\n",
-    "d_hidden = 10\n",
-    "n_context = 10\n",
-    "\n",
-    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
-    "\n",
-    "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "549c941e",
    "metadata": {},
@@ -371,6 +353,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a63ed903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_model = 10\n",
+    "d_vocab = 10\n",
+    "d_hidden = 10\n",
+    "n_context = 10\n",
+    "\n",
+    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
+    "\n",
+    "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a38824d3",
    "metadata": {},
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a7248308",
    "metadata": {},
    "outputs": [
@@ -389,23 +389,23 @@
      "output_type": "stream",
      "text": [
       "torch.Size([5, 10])\n",
-      "tensor([[ 0.3862,  0.2528, -0.3346, -0.4032, -0.0439, -0.0101,  0.3036,  0.1906,\n",
-      "         -0.2531,  0.5045],\n",
-      "        [-0.1007, -0.2256,  0.2427, -0.2873,  0.0038,  0.0195,  0.2928,  0.4025,\n",
-      "         -0.0872,  0.5707],\n",
-      "        [ 0.1671, -0.1158,  0.0721, -0.0478, -0.0767, -0.0494,  0.2726,  0.2951,\n",
-      "         -0.0321,  0.2939],\n",
-      "        [ 0.3037, -0.1483, -0.0331, -0.1628, -0.0641,  0.0091,  0.2530,  0.2732,\n",
-      "         -0.0047,  0.2618],\n",
-      "        [-0.0203,  0.2980,  0.0064,  0.2197,  0.1812,  0.3969, -0.0825,  0.3056,\n",
-      "         -0.0644,  0.5064]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[ 0.2862,  0.0475, -0.1215,  0.0995,  0.0951, -0.3010,  0.0202, -0.0497,\n",
+      "          0.4585,  0.0267],\n",
+      "        [ 0.2735, -0.2232, -0.0666,  0.5076,  0.3087, -0.4875, -0.1118, -0.4132,\n",
+      "          0.1509,  0.2209],\n",
+      "        [ 0.1298,  0.1163, -0.5592,  0.2264,  0.0268, -0.8176,  0.3348,  0.2700,\n",
+      "          0.6503,  0.1981],\n",
+      "        [-0.0304,  0.0858,  0.1060,  0.1452,  0.3341, -0.2087, -0.0563, -0.0702,\n",
+      "          0.5080, -0.3199],\n",
+      "        [ 0.2071, -0.5021,  0.2310,  0.2624,  0.6465, -0.2821, -0.0022, -0.2098,\n",
+      "         -0.1127, -0.0169]], grad_fn=<AddmmBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/danielkrawciw/Documents/llms/transformer/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1776: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "c:\\Users\\Sawyer\\Documents\\decodingGPT\\transformer\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1776: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  return self._call_impl(*args, **kwargs)\n"
      ]
     }
