Adding n_layers to tests

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,13 @@
     "    d_model: int\n",
     "    d_vocab: int\n",
     "    d_hidden: int\n",
-    "    n_context: int"
+    "    n_context: int\n",
+    "    n_layers: int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -101,7 +102,7 @@
     "    \n",
     "class Transformer(nn.Module):\n",
     "    def __init__(self, config:Config):\n",
-    "        self.transformerBlock = nn.ModuleList([TransformerBlock(config) for i in range(2)])\n",
+    "        self.transformerBlock = nn.ModuleList([TransformerBlock(config) for i in range(config.n_layers)])\n",
     "    \n",
     "    def forward(self, x):\n",
     "        for i, l in enumerate(self.transformerBlock):\n",
@@ -397,23 +398,23 @@
     "d_vocab = 10\n",
     "d_hidden = 10\n",
     "n_context = 5\n",
+    "n_layers = 10\n",
     "\n",
     "x = torch.randn((n_context, d_model))\n",
     "\n",
-    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
+    "conf = Config(d_model, d_vocab, d_hidden, n_context, n_layers)\n",
     "mlp = MLP(conf)\n",
     "attention = Attention(conf)\n",
     "Aoutput = attention(x)\n",
     "print(Aoutput.shape)\n",
     "\n",
     "output = mlp(x)\n",
-    "print(output)\n",
-    "\n"
+    "print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "6758f832",
    "metadata": {},
    "outputs": [
@@ -441,19 +442,21 @@
     "# Transformer Block test\n",
     "\n",
     "d_model = 10\n",
-    "d_vocab = 10\n",
+    "d_vocab = len(VOCAB_DICT)\n",
     "d_hidden = 10\n",
     "n_context = 5\n",
+    "n_layers = 10\n",
     "\n",
     "config = Config(\n",
     "    d_model = d_model,\n",
     "    d_vocab = d_vocab,\n",
     "    d_hidden = d_hidden,\n",
     "    n_context = n_context,\n",
+    "    n_layers = n_layers,\n",
     ")\n",
     "\n",
     "x = torch.randn((n_context, d_model))\n",
-    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
+    "conf = Config(d_model, d_vocab, d_hidden, n_context, n_layers)\n",
     "\n",
     "tb = TransformerBlock(config)\n",
     "\n",
@@ -464,30 +467,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9880932d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38d886bb",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
    "id": "a63ed903",
    "metadata": {},
    "outputs": [],
    "source": [
     "d_model = 10\n",
-    "d_vocab = len(DATA_ENCODED)\n",
+    "d_vocab = len(VOCAB_DICT)\n",
     "d_hidden = 10\n",
     "n_context = 10\n",
+    "n_layers = 10\n",
     "\n",
-    "conf = Config(d_model, d_vocab, d_hidden, n_context)\n",
+    "conf = Config(d_model, d_vocab, d_hidden, n_context, n_layers)\n",
     "\n",
     "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
     "\n"
