added embedding to the transformer class

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -103,11 +103,13 @@
     "class Transformer(nn.Module):\n",
     "    def __init__(self, config:Config):\n",
     "        self.transformerBlock = nn.ModuleList([TransformerBlock(config) for i in range(config.n_layers)])\n",
-    "    \n",
+    "        self.embedding = nn.Embedding(num_embeddings=config.d_vocab, embedding_dim=config.d_model)\n",
+    "\n",
     "    def forward(self, x):\n",
+    "        x = self.embedding(x)\n",
     "        for i, l in enumerate(self.transformerBlock):\n",
     "            x = self.transformerBlock[i](x)\n",
-    "        return "
+    "        return x"
    ]
   },
   {
