Initialize training loop

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -484,6 +484,33 @@
     "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a222519f",
+   "metadata": {},
+   "source": [
+    "## Training Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8470fa6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = Config(d_model = 10, \n",
+    "              d_vocab = len(VOCAB_DICT), \n",
+    "              d_hidden = 10, \n",
+    "              n_context = 10, \n",
+    "              n_layers = 2\n",
+    "              )\n",
+    "\n",
+    "\n",
+    "transformer = Transformer(config=conf)\n",
+    "output = transformer(DATA_ENCODED)"
+   ]
   }
  ],
  "metadata": {
