--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f5e0c294",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e91ce564",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2b5d489d",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "937b0e3d",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "549c941e",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "9c1b9c78",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "ad6713ca",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7c274f21",
    "metadata": {},
    "outputs": [
@@ -294,18 +294,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting book 84...\n",
-      "\t419422 characters read\n",
-      "Getting book 15...\n",
-      "\t1238469 characters read\n",
-      "Getting book 18...\n",
-      "\t1172825 characters read\n",
-      "Getting book 82...\n",
-      "\t1103796 characters read\n",
-      "Getting book 996...\n",
-      "\t2299352 characters read\n",
-      "Getting book 2600...\n",
-      "\t3208337 characters read\n"
+      "Getting book 6762...\n",
+      "\t584611 characters read\n",
+      "Getting book 1497...\n",
+      "\t1219052 characters read\n",
+      "Getting book 8438...\n",
+      "\t648768 characters read\n",
+      "Getting book 1600...\n",
+      "\t181248 characters read\n",
+      "Getting book 1656...\n",
+      "\t87284 characters read\n"
      ]
     }
    ],
@@ -318,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "317fb7a3",
    "metadata": {},
    "outputs": [
@@ -326,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATA_ENCODED = array([4675,   14,    0, ...,  320,    4,  422], shape=(2176323,))\n",
-      "2176323\n"
+      "DATA_ENCODED = array([1181,   25, 9326, ..., 4819, 4354, 1842], shape=(626081,))\n",
+      "626081\n"
      ]
     }
    ],
@@ -365,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a7248308",
    "metadata": {},
    "outputs": [
@@ -374,16 +372,17 @@
      "output_type": "stream",
      "text": [
       "torch.Size([5, 10])\n",
-      "tensor([[ 0.2862,  0.0475, -0.1215,  0.0995,  0.0951, -0.3010,  0.0202, -0.0497,\n",
-      "          0.4585,  0.0267],\n",
-      "        [ 0.2735, -0.2232, -0.0666,  0.5076,  0.3087, -0.4875, -0.1118, -0.4132,\n",
-      "          0.1509,  0.2209],\n",
-      "        [ 0.1298,  0.1163, -0.5592,  0.2264,  0.0268, -0.8176,  0.3348,  0.2700,\n",
-      "          0.6503,  0.1981],\n",
-      "        [-0.0304,  0.0858,  0.1060,  0.1452,  0.3341, -0.2087, -0.0563, -0.0702,\n",
-      "          0.5080, -0.3199],\n",
-      "        [ 0.2071, -0.5021,  0.2310,  0.2624,  0.6465, -0.2821, -0.0022, -0.2098,\n",
-      "         -0.1127, -0.0169]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[-1.5844e-01, -1.2614e-01, -1.5132e-01, -7.4821e-02, -3.3354e-02,\n",
+      "         -1.7954e-01,  5.4231e-03,  5.0504e-01,  1.9708e-01,  5.3856e-01],\n",
+      "        [-2.9039e-02, -4.2993e-01,  3.6675e-02, -8.0885e-02,  1.5491e-01,\n",
+      "          3.9740e-01,  1.4762e-01,  2.9777e-01,  4.1032e-01, -1.1207e-01],\n",
+      "        [-1.8447e-01, -5.5580e-02,  1.8991e-02,  2.4289e-01,  2.5611e-01,\n",
+      "          2.5013e-04, -2.4621e-01,  3.9945e-01,  1.0713e-02,  3.0392e-01],\n",
+      "        [-3.0789e-01, -1.8269e-01, -1.0287e-01,  2.2861e-01,  2.4110e-01,\n",
+      "         -1.2972e-01, -1.8224e-01,  4.0773e-01,  1.4991e-01,  3.6655e-01],\n",
+      "        [ 2.3969e-01,  3.0128e-01,  1.3705e-01,  2.0809e-01, -2.6409e-01,\n",
+      "          4.6971e-01, -2.3857e-01,  2.3207e-01, -3.3052e-01,  5.8728e-02]],\n",
+      "       grad_fn=<AddmmBackward0>)\n"
      ]
     },
     {
@@ -416,26 +415,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6758f832",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 3.8475, -2.0726,  1.0514,  0.8324, -0.4577, -1.6299,  0.7028,  2.8054,\n",
-       "         -0.8925, -1.0399],\n",
-       "        [ 2.9761, -0.6997, -0.6032,  2.6684,  0.1813,  1.4837, -0.1221,  0.9587,\n",
-       "          0.3077, -1.1505],\n",
-       "        [ 2.3151,  1.8852, -0.4046,  1.1583, -1.5020, -0.6166, -0.8820,  1.2308,\n",
-       "         -0.0742, -1.2055],\n",
-       "        [ 1.3883, -0.1457,  0.3347,  2.0383,  0.6824,  1.7610, -1.7258,  0.1451,\n",
-       "          0.2311, -2.7143],\n",
-       "        [-0.5221,  0.6496, -2.3000,  0.4011,  0.5412, -1.5619, -1.4592, -0.0642,\n",
-       "         -1.2541, -0.4855]], grad_fn=<AddBackward0>)"
+       "tensor([[ 1.2841,  1.2585, -0.3046,  1.2458,  1.5591, -1.8320, -2.0312,  0.7599,\n",
+       "         -0.4450,  0.2922],\n",
+       "        [-1.0739,  2.1877, -0.6875,  1.9496, -0.1120,  1.7716, -3.3345, -1.2047,\n",
+       "         -0.1815, -0.4620],\n",
+       "        [ 1.3334,  1.3246,  0.6766, -0.3026, -0.3247,  0.9369, -1.8377, -0.6661,\n",
+       "         -1.1505, -0.4307],\n",
+       "        [ 1.0869,  0.6554,  0.4093, -0.9846,  1.3897,  0.2202, -0.2722, -0.9686,\n",
+       "          0.1981,  1.2969],\n",
+       "        [ 0.1931, -0.3004, -1.2248, -0.1256,  1.0818,  0.3864,  0.1961, -1.7655,\n",
+       "         -0.2540, -0.4553]], grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,25 +463,6 @@
     "\n",
     "output_x = tb(x)\n",
     "output_x\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a63ed903",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_model = 10\n",
-    "d_vocab = len(VOCAB_DICT)\n",
-    "d_hidden = 10\n",
-    "n_context = 10\n",
-    "n_layers = 10\n",
-    "\n",
-    "conf = Config(d_model, d_vocab, d_hidden, n_context, n_layers)\n",
-    "\n",
-    "embedding = nn.Embedding(num_embeddings=conf.d_vocab, embedding_dim=conf.d_model)\n",
-    "\n"
    ]
   },
   {
@@ -515,7 +495,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "transformer",
+   "display_name": "transformer (3.12.5)",
    "language": "python",
    "name": "python3"
   },
