Created wrapper class for our dataset to be fed into torch.

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -354,6 +354,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e469a1d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, x):\n",
+    "        self.input = x[::-1]\n",
+    "        self.output = x[1::]\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.input)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        inp = self.input[idx]\n",
+    "        out = self.output[idx]\n",
+    "        return inp, out"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a38824d3",
    "metadata": {},
