Fixing colon problems

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -362,8 +362,8 @@
    "source": [
     "class CustomDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, x):\n",
-    "        self.input = x[::-1]\n",
-    "        self.output = x[1::]\n",
+    "        self.input = x[:-1]\n",
+    "        self.output = x[1:]\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.input)\n",
